resources/gitops-config/operators/longhorn/templates/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: longhorn-system
spec:
  parentRefs:
    - name: svc-gateway
      namespace: kube-system
      sectionName: svc-https-listener
  hostnames:
    - longhorn.svc.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
